--- a/style.css
+++ b/style.css
@@ -17,6 +17,8 @@
   
 }
 
+
+
 #footerp{
   color:white;
 }
@@ -111,6 +113,7 @@ input[type=submit]:hover{
 @media (max-width: 320px) {
   #panel, #flip{
     font-size: 13px;
-    width: 35%;
-   
+    
   }
+  }
+
